--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,19 +5,20 @@ layout: default
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
-    <p class="meta">
-        {{ page.date | date: "%b %-d, %Y" }}
-                {% if page.author %} • 
-                    {{ page.author }}
-                {% endif %}
-                {% if page.meta %} • 
-                    {{ page.meta }}
-                {% endif %}
-    </p>
+    <div class="meta">
+        <p class="date">{{ page.date | date: "%b %-d, %Y" }}</p>
+    </div> 
   </header>
 
   <article class="post-content">
   {{ content }}
   </article>
+
+  <footer class="post-footer"> 
+    <a class="author-link" href="{{page.author-link}}"> 
+        <img class="author-image" src="{{ page.author-email | gravatar}}" />
+            <p class="author">{{ page.author }} </p>
+    </a>
+  </footer>
 
 </div>
